objects/Build__c.object
<CustomObject>
    <fields>
        <fullName>Backup_URL__c</fullName>
        <inlineHelpText>Link to download a backup version of the components from the target</inlineHelpText>
        <label>Backup URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deploy_Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/slingshot?id=&apos; +  Id , &apos;Deploy&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Deploy this build</inlineHelpText>
        <label>Deploy Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the build was created by manually uploading a build package</description>
        <label>Manual Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_URL__c</fullName>
        <inlineHelpText>Link to download the build package</inlineHelpText>
        <label>Package URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Builds</relationshipLabel>
        <relationshipName>Builds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <referenceTo>Instances__c</referenceTo>
        <relationshipLabel>Builds</relationshipLabel>
        <relationshipName>Builds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target</label>
        <referenceTo>Instances__c</referenceTo>
        <relationshipLabel>Builds (Target)</relationshipLabel>
        <relationshipName>Builds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Build</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Build Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Builds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>